trying to fix SVG on Safari

--- a/packages/components/accordion/src/accordion-item.scss
+++ b/packages/components/accordion/src/accordion-item.scss
@@ -49,6 +49,10 @@ details {
     position: absolute;
   }
 
+  // rect {
+  //  transform-origin: 50%;
+  // }
+
   &[open],
   &.opening {
     .horizontal-line {
@@ -120,12 +124,20 @@ summary {
 }
 
 svg {
+  block-size: 28px;
+
+  // transform-box: content-box; // fill-box;
   flex-shrink: 0;
+  inline-size: 24px;
 }
 
-rect {
+g {
   fill: currentcolor;
-  transform-origin: center;
+
+  // transform-origin: 50% 50%; // 50% 50%; // center;
+  // transform-box: content-box;
+  transform-box: view-box; // fill-box;
+  transform-origin: 50% 50%; // center;
 
   &.horizontal-line {
     transform: rotate(90deg);
